--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "amuhub-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
-    "start": "ts-node src/app.ts",
-    "server": "nodemon src/app.ts",
+    "start": "ts-node app.ts",
+    "server": "nodemon app.ts",
     "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4"
   },
   "devDependencies": {
