--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGO_URL = mongodb+srv://faraz:1234@cluster0.5ac09gz.mongodb.net/?retryWrites=true&w=majority
 SECRET_KEY = 5k6TQgApvn8dJbUYbbf7QHoS7UCyhHuo
+CLOUD_NAME = dtt5pe9sl
+CLOUD_KEY = 779356489877181
+CLOUD_SECRET = ZInYXW0OQl5vJK5ofN_h_3YMd18
