--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "amuhub-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "app.js",
   "scripts": {
-    "start": "ts-node app.ts",
-    "server": "nodemon app.ts",
+    "start": "node app.js",
+    "server": "nodemon app.js",
     "build": "tsc -p ."
   },
   "keywords": [],
@@ -13,17 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.31.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.7.13",
-    "nodemon": "^2.0.19",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "nodemon": "^2.0.19"
   }
 }
