--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "server": "nodemon app.js",
-    "build": "tsc -p ."
+    "server": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
