--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "server": "nodemon app.js"
+    "server": "nodemon app.js",
+    "format": "prettier --write \"./**/*.{js,jsx}\""
   },
   "keywords": [],
   "author": "",
@@ -21,9 +22,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "prettier": "^2.8.8"
   }
 }
