--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SECRET_KEY = 5k6TQgApvn8dJbUYbbf7QHoS7UCyhHuo
 CLOUD_NAME = dtt5pe9sl
 CLOUD_KEY = 779356489877181
 CLOUD_SECRET = ZInYXW0OQl5vJK5ofN_h_3YMd18
+SELF_URL = https://amuhub-server.onrender.com
